# turbomesh

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
doc/: smoothing.md
docs/: intro.md  smoothing.md  templates.md
examples/LS89/: LS89.json
examples/T106/: T106.json  T106.yaml  T106_turbine.yaml
lldb/: formatter.py
src/: boundary.zig  boundary.zig.bkp  cgns.rs  cgns.zig  clustering.rs  clustering.zig  cmd.zig  csv.zig  discrete.zig  generator.zig  geometry.rs  geometry.zig  gl.rs  interpolation.rs  lib.rs  lib.zig  main.rs  main.zig  mesh.rs  output.rs  output.zig  petsc_import.zig  petsc_shim.c  reload.zig  smooth.zig  smooth_old.zig  smoothing.rs  solver.zig  spline.zig  state.zig  template.zig  templates.rs  test.rs  test.zig  tests.zig  tfi.rs  tfi.zig  turbine.rs  turbine.zig  types.rs  (+2 more)
src/core/: boundary.zig  cgns.zig  clustering.zig  discrete.zig  geometry.zig  input.zig  lib.zig  machine.zig  spline.zig  tests.zig  tfi.zig
src/core/smoothing/: BiCGStab.zig  GMRES.zig  petsc.zig  petsc_import.zig  preconditioner.zig  smooth.zig  smoothing.zig  solver.zig  umfpack.zig  wall_control_function.zig
src/gui/: lib.zig  main.zig  platform.zig  reload.zig  state.zig  wayland.zig
src/smoothing/: block_boundary_props.rs  control_function.zig  mumps.zig  petsc.zig  petsc_import.zig  petsc_shim.c  smooth.zig  solver.zig  umfpack.zig
src/templates/: O4H.zig  blade.zig  helper.rs  o4h.rs  templates.zig  turbine.rs
src/types/: array2d.rs  block2d.rs  boundary.rs  edge.rs  indices.rs  segment.rs  vec2d.rs
src/wasm/: lib.zig
web/: sdk.ts
(+3 files in other folders)
