[package]
name = "turbomesh"
version = "0.1.0"
edition = "2021"
authors = ["Pascal Post <pascal.post@mailbox.org>"]
license = "AGPL-3.0-or-newer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dierckx-sys = "0.1.0"
cgns-sys = "0.2.1"
csv = "1.1"
libc = "0.2"
plotters = "0.3.1"
ndarray = "0.15"
float-cmp = "0.9"
egui = "0.20"
egui_glow = "0.20"
glow = "0.11"
eframe = { version = "0.20" , features = [ "__screenshot" ] }
num-traits = "0.2"
rfd = "0.10.0"